# poliastrs

./: .gitignore  Cargo.toml  MIGRATION.md  POLIASTRO_PYTHON_API_INVENTORY.md  README.md  molniya.czml  py-counterpart
examples/: analyzing_neos.rs  atmospheric_models.rs  catch_asteroid.rs  comparing_transfers.rs  cowell_prop.rs  custom_plots.rs  czml_tutorial.rs  detecting_events.rs  distance_by_time.rs  going_to_jupiter.rs  going_to_mars.rs  groundtracks.rs  hohmann_transfer.rs  loading_omm_tle.rs  new_horizons.rs  parker_solar_probe.rs  porkchop_plot.rs  quickstart.rs
src/: bodies.rs  constants.rs  examples.rs  frames.rs  lib.rs  maneuvers.rs  sensors.rs  spheroid_location.rs  util.rs
src/core/: angles.rs  elements.rs  hyper.rs  mod.rs  stumpff.rs  util.rs
src/earth/: enums.rs  mod.rs  satellite.rs  util.rs
src/earth/atmosphere/: coesa76.rs  mod.rs  util.rs
src/ephem/: interpolator.rs  mod.rs  tests.rs
src/frames/: mod.rs  rotation.rs  tests.rs
src/iod/: lambert.rs  mod.rs  vallado.rs
src/plotting/: czml.rs  gabbard.rs  misc.rs  mod.rs  orbit_plotter.rs  porkchop.rs  tisserand.rs
src/spacecraft/: mod.rs
src/threebody/: cr3bp.rs  flyby.rs  lagrange.rs  mod.rs  soi.rs
src/twobody/: angles.rs  elements.rs  events.rs  maneuver.rs  mean_elements.rs  mod.rs  orbit.rs  perturbations.rs  sampling.rs  states.rs  thrust.rs
src/twobody/propagation/: cowell.rs  farnocchia.rs  mod.rs  tests.rs  vallado.rs
tests/: test_gabbard.rs  test_misc.rs  test_orbit_plotter.rs  test_porkchop.rs  test_tisserand.rs
