[package]
name = "poliastrs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
nalgebra = "0.34.1"
plotters = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sgp4 = "2.4.0"

[dev-dependencies]
approx = "0.5"
